# shrub-prepro

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: create_test_samples.py
src/: run_pipeline.py  utils.py
src/shrub_prepro/: cli.py  images.py  io.py  processing.py  run_pipeline.py  split.py
src/shrub_prepro/io/: s3.py
src/shrub_prepro/processing/: __init__.py  raster.py  transform.py
tests/: conftest.py  test_images.py  test_pipeline.py
